Prevented zooming to textarea on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+body { 
+  margin: 0px;
+  font-size: 16px; 
+}
+
+input, select, textarea { 
+  font-size: 100%; 
+}
+
 .App {
   display: flex;
   flex-direction: column;
